HBASE-20180 Avoid Class::newInstance